# SurgeReflect

./: .clang-format  CMakeLists.txt  README.md
Source/: Registry.cpp  main.cpp
Source/Include/SurgeReflect/: Class.hpp  Reflection.hpp  TypeTraits.hpp  Variable.hpp
SurgeReflect/: main.cpp
SurgeReflect/Include/SurgeReflect/: Class.hpp  Function.hpp  Reflection.hpp  Registry.hpp  Type.hpp  TypeTraits.hpp  Variable.hpp
SurgeReflect/Source/: Registry.cpp
